[gd_scene load_steps=3 format=3 uid="uid://cvqfsjxwqx2f5"]

[ext_resource type="Script" uid="uid://xrxejfhq410v" path="res://scenes/ui/options_menu/options_menu.gd" id="1_kyv63"]
[ext_resource type="PackedScene" uid="uid://cgvaqwloyyjlr" path="res://scenes/ui/sound_button/sound_button.tscn" id="3_6vr1v"]

[node name="options_menu" type="CanvasLayer"]
layer = 2
script = ExtResource("1_kyv63")

[node name="margin_container" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="panel_container" type="PanelContainer" parent="margin_container"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="margin_container" type="MarginContainer" parent="margin_container/panel_container"]
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="v_box_container" type="VBoxContainer" parent="margin_container/panel_container/margin_container"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 24

[node name="label_game_title" type="Label" parent="margin_container/panel_container/margin_container/v_box_container"]
layout_mode = 2
theme_type_variation = &"BlueOutlineLabel"
theme_override_font_sizes/font_size = 48
text = "Options"
horizontal_alignment = 1
vertical_alignment = 1

[node name="v_box_container" type="VBoxContainer" parent="margin_container/panel_container/margin_container/v_box_container"]
layout_mode = 2
theme_override_constants/separation = 12

[node name="sfx_options_container" type="VBoxContainer" parent="margin_container/panel_container/margin_container/v_box_container/v_box_container"]
layout_mode = 2

[node name="label_sfx_volume" type="Label" parent="margin_container/panel_container/margin_container/v_box_container/v_box_container/sfx_options_container"]
layout_mode = 2
theme_type_variation = &"BlueOutlineLabel"
text = "SFX Volume"

[node name="sfx_slider" type="HSlider" parent="margin_container/panel_container/margin_container/v_box_container/v_box_container/sfx_options_container"]
unique_name_in_owner = true
layout_mode = 2
max_value = 1.0
step = 0.01

[node name="bgm_options_container" type="VBoxContainer" parent="margin_container/panel_container/margin_container/v_box_container/v_box_container"]
layout_mode = 2

[node name="label_bgm_volume" type="Label" parent="margin_container/panel_container/margin_container/v_box_container/v_box_container/bgm_options_container"]
layout_mode = 2
theme_type_variation = &"BlueOutlineLabel"
text = "BGM Volume"

[node name="bgm_slider" type="HSlider" parent="margin_container/panel_container/margin_container/v_box_container/v_box_container/bgm_options_container"]
unique_name_in_owner = true
layout_mode = 2
max_value = 1.0
step = 0.01
value = 0.5

[node name="window_options_container" type="VBoxContainer" parent="margin_container/panel_container/margin_container/v_box_container/v_box_container"]
layout_mode = 2

[node name="label_window_mode" type="Label" parent="margin_container/panel_container/margin_container/v_box_container/v_box_container/window_options_container"]
layout_mode = 2
theme_type_variation = &"BlueOutlineLabel"
text = "Window Mode"

[node name="window_mode_button" parent="margin_container/panel_container/margin_container/v_box_container/v_box_container/window_options_container" instance=ExtResource("3_6vr1v")]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_horizontal = 0

[node name="back_button" parent="margin_container/panel_container/margin_container/v_box_container" instance=ExtResource("3_6vr1v")]
unique_name_in_owner = true
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
size_flags_horizontal = 0
text = "Back"
